// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleDrawing actions should be initialized first 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={0}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt=""
    shapeMarkers={0}
  />
  <PointsAvailable
    drawingMode="none"
    shapeMarkers={0}
  />
</section>
`;

exports[`ToggleDrawing actions should save previous markers and trigger cancel when shape has been drawn 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={2}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt="1.89 km"
    shapeMarkers={2}
  />
  <PointsAvailable
    drawingMode="none"
    shapeMarkers={2}
  />
</section>
`;

exports[`ToggleDrawing actions should turn drawing on and off when drawing mode has switched 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="draw"
    shapeMarkers={0}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt=""
    shapeMarkers={0}
  />
  <PointsAvailable
    drawingMode="draw"
    shapeMarkers={0}
  />
</section>
`;

exports[`ToggleDrawing actions should turn drawing on and off when drawing mode has switched 2`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={0}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt=""
    shapeMarkers={0}
  />
  <PointsAvailable
    drawingMode="none"
    shapeMarkers={0}
  />
</section>
`;

exports[`ToggleDrawing rendering should render points available, shape summary and toggle drawing 1`] = `
<section
  className="draw-tool"
>
  <ToggleDrawing
    drawingMode="none"
    shapeMarkers={0}
  />
  <ShapeSummary
    onClearDrawing={[Function]}
    shapeDistanceTxt=""
    shapeMarkers={0}
  />
  <PointsAvailable
    drawingMode="none"
    shapeMarkers={0}
  />
</section>
`;
